--- a/src/app/memo/list-memo/list-memo.component.html
+++ b/src/app/memo/list-memo/list-memo.component.html
@@ -1,19 +1,19 @@
-<div class="flex flex-row justify-content-center">
-    <div  class="flex-auto"></div>
-    <div class="flex-auto min-w-max "  >
-  <p-virtualScroller  [value]="virtualMemos" scrollHeight="450px" [itemSize]="200" [lazy]="true" (onLazyLoad)="loadMemoLazy($event)">
+  <p-virtualScroller  [value]="virtualMemos" scrollHeight="99999px" class="full-height-scroller" [itemSize]="undefined" [lazy]="true" (onLazyLoad)="loadMemoLazy($event)">
     <ng-template pTemplate="header">List of Memos</ng-template> 
     
     <ng-template let-memo pTemplate="item">
-        <div class="flex flex-grow-1 bg-blue-700 p-2 border-round ">
+        <div class="p-2">
+
+  
+        <div class="flex flex-grow-1 bg-blue-700 p-2 border-round">
             <div class="flex flex-grow-1 flex-column flex-nowrap">
-                <p-fieldset legend={{memo.title}} [toggleable]="true">
+                <p-fieldset legend={{memo.title}} [toggleable]="true" [collapsed]=true>
                     <div class="flex flex-column flex-nowrap">
                     <p class="m-0">
                         {{memo.details}}
                     </p>
                     <a href={{memo.url}} *ngIf='memo.url !== undefined'  target="_blank" rel="noopener noreferrer">{{ memo.url }}</a>
-                    <label class="text-base">Last edited :{{memo.date| date : 'medium'}}</label>
+                    <label class="text-base">Last edited: {{memo.date| date : 'medium'}}</label>
                     </div>
                 </p-fieldset>
             </div>
@@ -21,7 +21,7 @@
             <p-button label="Edit" icon="pi pi-pencil" (onClick)="update(memo)" size="small"></p-button>
             <p-button label="Delete" icon="pi pi-trash" (onClick)="delete($event, memo)" size="small"  severity="danger"></p-button>
             </div>
-            
+                  </div>
     </div>
     </ng-template> 
 
@@ -31,8 +31,4 @@
         </div>
     </ng-template>
 </p-virtualScroller>
-<p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
-   </div>
-   <div  class="flex-auto"></div>
-</div>
