--- a/src/app/memo/list-memo/list-memo.component.html
+++ b/src/app/memo/list-memo/list-memo.component.html
@@ -1,6 +1,5 @@
 <p-scrollPanel [style]="{width: '100%', height: '100%'}">
-
-        <div *ngFor="let memo of memos"class="p-2">
+    <div *ngFor="let memo of memos"class="p-2">
         <div class="flex flex-grow-1 bg-blue-700 p-2 border-round">
             <div class="flex flex-grow-1 flex-column flex-nowrap">
                 <p-fieldset legend={{memo.title}} [toggleable]="true" [collapsed]=true>
@@ -14,10 +13,13 @@
                 </p-fieldset>
             </div>
             <div class="flex flex-column flex-nowrap align-items-center">
-            <p-button label="Edit" icon="pi pi-pencil" (onClick)="update(memo)" size="small"></p-button>
-            <p-button label="Delete" icon="pi pi-trash" (onClick)="delete($event, memo)" size="small"  severity="danger"></p-button>
+                <p-button label="Edit" icon="pi pi-pencil" (onClick)="update(memo)" size="small"></p-button>
+                <p-button label="Delete" icon="pi pi-trash" (onClick)="delete($event, memo)" size="small"  severity="danger"></p-button>
             </div>
-                  </div>
+        </div>
     </div>
 </p-scrollPanel>
+<label *ngIf="!hasMemos">
+Add your first memo to the list
+</label>
 <p-confirmDialog></p-confirmDialog>
